[fx]: alloy -> otlp

--- a/config/grafana/datasources/datasource.yaml
+++ b/config/grafana/datasources/datasource.yaml
@@ -1,21 +1,21 @@
 apiVersion: 1
 
 deleteDatasources:
-  - name: 'Mimir'
+  - name: 'Prometheus'
   - name: 'Tempo'
   - name: 'Loki'
 
 datasources:
-  - name: 'Mimir'
+  - name: 'Prometheus'
     type: 'prometheus'
     access: 'proxy'
     orgId: 1
-    url: 'http://mimir:9009/prometheus'
+    url: 'http://prometheus:9090'
     basicAuth: false
     isDefault: false
     version: 1
     editable: false
-    uid: 'mimir'
+    uid: 'prometheus'
     jsonData:
       exemplarTraceIdDestinations:
         - datasourceUid: 'tempo'
@@ -40,7 +40,7 @@ datasources:
       nodeGraph:
         enabled: 'true'
       serviceMap:
-        datasourceUid: 'mimir'
+        datasourceUid: 'prometheus'
 
   - name: 'Loki'
     type: 'loki'
