--- a/config/tempo/tempo.yaml
+++ b/config/tempo/tempo.yaml
@@ -38,7 +38,7 @@ metrics_generator:
   storage:
     path: '/tmp/tempo/generator/wal'
     remote_write:
-      - url: 'http://mimir:9009/api/v1/push'
+      - url: 'http://prometheus:9090/api/v1/push'
         send_exemplars: true
 
 storage:
